<resources>
    <string name="search_hint">Kelime ara</string>
    <string name="word_of_day">Günün kelimesi</string>
    <string name="word_origin">Köken</string>
    <string name="word_equivalent">Karşılık</string>
    <string name="word_mean">Anlamı</string>
    <string name="frequent_mistakes">Sıkça Yapılan Yanlışlar</string>
    <string name="frequent_mixed">Sıkça Karıştırılan Sözcükler</string>
    <string name="one_word">Bir Kelime</string>
    <string name="one_proverb">Bir Atasözü - Deyim</string>
    <string name="one_rule">Bir Kural Öğren</string>
    <string name="about">Hakkımızda</string>
    <string name="favorites">Favoriler</string>

    <string name="capped_a">â</string>
    <string name="capped_i">î</string>
    <string name="capped_u">û</string>

    <string name="colon">:</string>
    <string name="dash">-</string>
    <string name="dot">.</string>

    <string name="means">Anlamlar</string>
    <string name="proverbs">Atasözleri ve Deyimler</string>
    <string name="finger_alphabet">Parmak Alfabesi</string>
    <string name="delete_history">Tüm Geçmişi Sil</string>
    <string name="sifat">sıfat</string>
    <string name="empty_favorite">Favori kelimeniz bulunmuyor. Kelime detayından kelimeyi favoriye ekleyebilirsin.</string>

    <string name="alphabet_ext">%1$s%2$s.gif</string>
    <string name="version">Versiyon: %s</string>
    <string name="about_app">%1s, Türk Dil Kurumunun verilerini kullanan açık kaynak bir sözlük
        uygulamasıdır. Projeye katkıda bulunmak veya kaynak kodlarını incelemek için %2s adresine
        gidebilirsiniz. \n\n Uygulama için geri bildirim göndermek
        isterseniz de %3s adresine mail atabilirsiniz.</string>

</resources>
