<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="content"
            type="com.mucahitkambur.tdksozluk.model.ContentResult" />
    </data>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.main.MainFragment"
            android:fitsSystemWindows="true"
            android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue">

            <LinearLayout
                android:id="@+id/linear_main"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_normal"
                android:paddingStart="@dimen/margin_large"
                android:paddingEnd="@dimen/margin_normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:tag="parallax=0.5"
                    android:text="@string/word_of_day" />

                <TextView
                    android:id="@+id/text_world_of_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:textColor="@android:color/white"
                    android:textSize="36sp"
                    android:tag="parallax=0.9"
                    android:text="@{content.yabanci.kkelime}" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word_origin"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/text_origin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@{content.yabanci.kkoken}"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word_equivalent"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/text_equivalent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        htmlToText="@{content.yabanci.kkarsilik}"
                        android:textColor="@android:color/white" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/word_mean"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/text_mean"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="@dimen/spacing_normal"
                        htmlToText="@{content.yabanci.anlam}"
                        android:textColor="@android:color/white" />
                </LinearLayout>

            </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toBottomOf="@+id/linear_main"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:cardElevation="5dp"
                    app:cardBackgroundColor="@color/background"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_frequent_mistakes_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/frequent_mistakes"
                            android:textColor="@color/blue"
                            android:textSize="20sp"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:layout_marginStart="@dimen/margin_normal"/>

                        <com.mucahitkambur.tdksozluk.view.WrapViewPager
                            android:id="@+id/pager_mistakes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:clipToPadding="false"
                            android:clipChildren="false"/>

                        <TextView
                            android:id="@+id/text_frequent_mixed_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/frequent_mixed"
                            android:textColor="@color/blue"
                            android:textSize="20sp"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:layout_marginStart="@dimen/margin_normal"/>

                        <com.mucahitkambur.tdksozluk.view.WrapViewPager
                            android:id="@+id/pager_mixed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:clipToPadding="false"
                            android:clipChildren="false"/>

                        <TextView
                            android:id="@+id/text_one_word_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/one_word"
                            android:textColor="@color/blue"
                            android:textSize="20sp"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:layout_marginStart="@dimen/margin_normal"/>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_medium"
                            android:layout_marginBottom="@dimen/margin_medium"
                            app:cardElevation="5dp"
                            app:cardCornerRadius="10dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_normal">

                                <TextView
                                    android:id="@+id/text_one_word"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="8dp"
                                    android:includeFontPadding="false"
                                    android:text="@{content.kelime.get(0).madde}"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintBottom_toTopOf="@+id/text_one_word_desc"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="bungalov" />

                                <TextView
                                    android:id="@+id/text_one_word_desc"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    app:layout_constraintTop_toBottomOf="@+id/text_one_word"
                                    app:layout_constraintStart_toStartOf="@+id/text_one_word"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    android:layout_marginTop="@dimen/spacing_normal"
                                    android:text="@{content.kelime.get(0).anlam}"
                                    tools:text="bungalov"/>

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/text_one_proverb_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/one_proverb"
                            android:textColor="@color/blue"
                            android:textSize="20sp"
                            android:layout_marginTop="@dimen/margin_normal"
                            android:layout_marginStart="@dimen/margin_normal"/>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/margin_medium"
                            android:layout_marginBottom="@dimen/margin_medium"
                            app:cardElevation="5dp"
                            app:cardCornerRadius="10dp">

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="@dimen/margin_normal">

                                <TextView
                                    android:id="@+id/text_one_proverb"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/spacing_normal"
                                    android:text="@{content.atasoz.get(0).madde}"
                                    android:includeFontPadding="false"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintBottom_toTopOf="@+id/text_one_proverb_desc"
                                    app:layout_constraintTop_toTopOf="parent"
                                    tools:text="bungalov" />

                                <TextView
                                    android:id="@+id/text_one_proverb_desc"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    app:layout_constraintTop_toBottomOf="@+id/text_one_proverb"
                                    app:layout_constraintStart_toStartOf="@+id/text_one_proverb"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    android:layout_marginTop="@dimen/spacing_normal"
                                    android:text="@{content.atasoz.get(0).anlam}"
                                    tools:text="bungalov"/>

                            </androidx.constraintlayout.widget.ConstraintLayout>

                        </androidx.cardview.widget.CardView>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>