<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isVisible"
            type="Boolean" />

        <variable
            name="searchContent"
            type="com.mucahitkambur.tdksozluk.model.search.SearchResult" />

        <variable
            name="viewModel"
            type="com.mucahitkambur.tdksozluk.ui.search.SearchViewModel" />

        <variable
            name="favorite"
            type="com.mucahitkambur.tdksozluk.model.favorites.Favorite" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        android:fitsSystemWindows="true"
        tools:context=".ui.search.SearchDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar_common"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:elevation="0dp">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_common"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:navigationIcon="@drawable/ic_back">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/ivFavorite"
                            isFavorited="@{favorite}"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="@dimen/margin_normal"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tint="@android:color/white"
                            tools:srcCompat="@drawable/ic_favorites" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.AppBarLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_detail_word"
                android:background="@color/blue"
                android:gravity="center_vertical">

                <TextView
                    style="@style/TextAppearance.Header.Title"
                    visibleInvisible="@{isVisible}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_huge"
                    android:layout_marginEnd="@dimen/margin_huge"
                    android:text="@{searchContent.capitalize()}" />
            </RelativeLayout>

            <com.github.captain_miao.optroundcardview.OptRoundCardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                app:optRoundCardBottomEdges="false"
                app:optRoundCardCornerRadius="@dimen/margin_normal"
                app:optRoundCardLeftBottomCorner="false"
                app:optRoundCardRightBottomCorner="false">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/spacing_micro">

                    <LinearLayout
                        visibleInvisible="@{isVisible}"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_medium"
                            android:layout_marginTop="@dimen/margin_medium"
                            android:text="@string/means" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyc_search_mean"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                        <TextView
                            style="@style/TextAppearance.Title"
                            visibleGone="@{searchContent.atasozu == null ? false : true}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_medium"
                            android:layout_marginTop="@dimen/margin_medium"
                            android:layout_marginBottom="@dimen/margin_medium"
                            android:text="@string/proverbs" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyc_search_proverb"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                            app:spanCount="3" />

                        <TextView
                            style="@style/TextAppearance.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_medium"
                            android:layout_marginTop="@dimen/margin_medium"
                            android:layout_marginBottom="@dimen/margin_medium"
                            android:text="@string/finger_alphabet" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/recyc_search_alphabet"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>
            </com.github.captain_miao.optroundcardview.OptRoundCardView>

        </LinearLayout>

        <ProgressBar
            visibleGone="@{!isVisible}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>